force-app/main/default/objects/ucinn_ascendv2__Action_Center_Staging__c/ucinn_ascendv2__Action_Center_Staging__c.object-meta.xml
<CustomObject>
    <description>Used for display action center cards</description>
    <label>Action Center Staging</label>
    <nameField>
        <label>Action Center Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Center Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>