force-app/main/default/objects/ucinn_ascendv2__Action_Center_Staging__c/fields/ucinn_ascendv2__Account__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Action Center Stagings</relationshipLabel>
    <relationshipName>Action_Center_Stagings_Account</relationshipName>
    <type>Lookup</type>
</CustomField>