force-app/main/default/objects/ucinn_ascendv2__Action_Center_Staging__c/fields/ucinn_ascendv2__Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Action Center Stagings</relationshipLabel>
    <relationshipName>Action_Center_Stagings_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>