force-app/main/default/objects/ucinn_ascendv2__Action_Center_Staging__c/fields/ucinn_ascendv2__Display_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Display_Date__c</fullName>
    <label>Display Date</label>
    <type>Date</type>
</CustomField>