force-app/main/default/objects/ucinn_ascendv2__Action_Center_Staging__c/fields/ucinn_ascendv2__Display_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Display_Name__c</fullName>
    <label>Display Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>