force-app/main/default/objects/ucinn_ascendv2__Action_Center_Staging__c/fields/ucinn_ascendv2__Display_Name_Prefix__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Display_Name_Prefix__c</fullName>
    <label>Display Name Prefix</label>
    <length>1</length>
    <type>Text</type>
</CustomField>