force-app/main/default/objects/ucinn_ascendv2__Action_Center_Staging__c/fields/ucinn_ascendv2__Display_Now__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Display_Now__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Now</label>
    <type>Checkbox</type>
</CustomField>