force-app/main/default/objects/ucinn_ascendv2__Action_Center_Staging__c/fields/ucinn_ascendv2__Donor_Photo_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Donor_Photo_ID__c</fullName>
    <label>Donor Photo ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>