force-app/main/default/objects/ucinn_ascendv2__Action_Center_Staging__c/fields/ucinn_ascendv2__Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Email_Addresses__c</fullName>
    <label>Email Addresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>