force-app/main/default/objects/ucinn_ascendv2__Action_Center_Staging__c/fields/ucinn_ascendv2__Fundraiser__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fundraiser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fundraiser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Action_Center_Stagings_Fundraiser</relationshipName>
    <type>Lookup</type>
</CustomField>