force-app/main/default/objects/ucinn_ascendv2__Action_Center_Staging__c/fields/ucinn_ascendv2__Fundraising_MTD__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fundraising_MTD__c</fullName>
    <label>Fundraising MTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>