force-app/main/default/objects/ucinn_ascendv2__Action_Center_Staging__c/fields/ucinn_ascendv2__Is_Correct_Prospect__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Correct_Prospect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Correct Prospect</label>
    <type>Checkbox</type>
</CustomField>