force-app/main/default/objects/ucinn_ascendv2__Action_Center_Staging__c/fields/ucinn_ascendv2__News_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__News_Photo_URL__c</fullName>
    <label>News Photo URL (DEPRECATE)</label>
    <type>Url</type>
</CustomField>