force-app/main/default/objects/ucinn_ascendv2__Action_Center_Staging__c/fields/ucinn_ascendv2__News_Photo_URL_v1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__News_Photo_URL_v1__c</fullName>
    <label>News Photo URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>