force-app/main/default/objects/ucinn_ascendv2__Action_Center_Staging__c/fields/ucinn_ascendv2__Panel__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Panel__c</fullName>
    <label>Panel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DidYouKnow</fullName>
            </value>
            <value>
                <fullName>Digits</fullName>
            </value>
            <value>
                <fullName>News</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Removal</fullName>
            </value>
            <value>
                <fullName>ThankYou</fullName>
            </value>
            <value>
                <fullName>Unassigned</fullName>
            </value>
            <value>
                <fullName>DonationReminder</fullName>
            </value>
            <value>
                <fullName>PledgePaymentReminder</fullName>
            </value>
            <value>
                <fullName>AbnormalGiftDecrease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>