force-app/main/default/objects/ucinn_ascendv2__Action_Center_Staging__c/fields/ucinn_ascendv2__Unit_Fundraising_YTD__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Unit_Fundraising_YTD__c</fullName>
    <label>Unit Fundraising YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>