force-app/main/default/objects/ucinn_ascendv2__Action_Center_Staging__c/fields/ucinn_ascendv2__Visits_MTD__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Visits_MTD__c</fullName>
    <label>Visits MTD</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>