force-app/main/default/objects/ucinn_ascendv2__Action_Center_Staging__c/listViews/ucinn_ascendv2__All.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Dismissed_Date__c</columns>
    <columns>ucinn_ascendv2__Display_Date__c</columns>
    <columns>ucinn_ascendv2__Display_Now__c</columns>
    <columns>ucinn_ascendv2__Expiration_Date__c</columns>
    <columns>ucinn_ascendv2__Panel__c</columns>
    <columns>ucinn_ascendv2__Fundraiser__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>